--- a/give_away_site/src/scss/settings/_colors.scss
+++ b/give_away_site/src/scss/settings/_colors.scss
@@ -2,4 +2,4 @@ $main-white: #F0F1F1;
 $color-accent-brown: #5E5322;
 $color-accent-yellow: #FAD648;
 $color-light-grey: #737373;
-$color-dark-graey:#3C3C3C;
+$color-dark-grey:#3C3C3C;
