--- a/give_away_site/src/components/HomePage/HomeContactForm/HomeContactForm.scss
+++ b/give_away_site/src/components/HomePage/HomeContactForm/HomeContactForm.scss
@@ -19,21 +19,47 @@
         #form-right {
             width: 40%;
             min-height: 80vh;
-            padding-top: 10em;
-            padding-right: 2em;
-            padding-left: 2em;
+            display: flex;
+            justify-content: center;
+
+            form {
+                align-self: center;
+                width: 75%;
+                height: 50%;
+            }
 
             #text-area-row {
                 display: block;
                 text-align: left;
+                height: 11em;
+
+                .form-full {
+                    height: 100%;
+                    width: 100%;
+                    position: relative;
+
+                    
+
+                    p {
+                        line-height: 1;
+                        margin-bottom: 0;
+                        position: absolute;
+                        bottom: 10px;
+                        width: 100%;
+                        font-size: 0.7em;
+                        letter-spacing: 0;
+                        text-align: left;
+                        font-weight: bold;
+                    }
+                }
 
                 textarea {
-                    width: 80%;
+                    width: 100%;
                     background-color: inherit;
                     border: none;
                     border-bottom: 1px solid black;
                     resize: none;
-                    height: 126px;
+                    height: 90px;
                     font-size: 1.1em;
 
                     &:focus {
@@ -72,20 +98,40 @@
                 padding-top: 2em;
             }
 
+            .title-row {
+                flex-direction: column;
+                display: flex;
+            }
+
             .form-row {
                 display: flex;
-                justify-content: flex-start;
+                justify-content: space-between;
                 width: 100%;
-                padding-top: 2em;
-                padding-left: 1em;
-
-                :first-child {
-                    margin-right: 1.5em;
+                height: 7em;
+                
+                .form-full {
+                    .button-wrapper {
+                        width: 100%;
+                        display: flex;
+                        justify-content: end;
+    
+                        button {
+                            height: 50px;
+                            width: 200px;
+                            border-radius: 0;
+                            padding: 15px;
+                            align-self: center;
+                        }
+                    }
                 }
+
+                
+                
 
                 .form {
                     position: relative;
-                    height: 70px;
+                    height: 100%;
+                    width: 48%;
 
 
 
@@ -93,10 +139,12 @@
                         line-height: 1;
                         margin-bottom: 0;
                         position: absolute;
-                        bottom: 0;
+                        bottom: 10px;
                         width: 100%;
                         font-size: 0.7em;
                         letter-spacing: 0;
+                        text-align: left;
+                        font-weight: bold;
                     }
                 }
             }
@@ -106,7 +154,7 @@
                 border: none;
                 background: inherit;
                 border-bottom: 1px solid black;
-                width: 15em;
+                width: 100%;
                 font-size: 1.1em;
 
                 &:focus {
