--- a/give_away_site/src/components/HomePage/HomeContactForm/HomeContactForm.scss
+++ b/give_away_site/src/components/HomePage/HomeContactForm/HomeContactForm.scss
@@ -1,7 +1,7 @@
 @import "../../../scss/settings/colors";
 @import "../../../scss/settings/fonts";
 
-#form-section {
+/* #form-section {
     background-image: url("../../../assets/Background-Contact-Form.jpg");
     background-position: initial;
     background-size: cover;
@@ -38,7 +38,7 @@
                     width: 100%;
                     position: relative;
 
-                    
+
 
                     p {
                         line-height: 1;
@@ -108,13 +108,13 @@
                 justify-content: space-between;
                 width: 100%;
                 height: 7em;
-                
+
                 .form-full {
                     .button-wrapper {
                         width: 100%;
                         display: flex;
                         justify-content: end;
-    
+
                         button {
                             height: 50px;
                             width: 200px;
@@ -124,9 +124,6 @@
                         }
                     }
                 }
-
-                
-                
 
                 .form {
                     position: relative;
@@ -168,5 +165,192 @@
             }
         }
     }
-}
+} */
 
+
+#form-section {
+    background-image: url("../../../assets/Background-Contact-Form.jpg");
+    background-position: initial;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background: rgba(255, 255, 255, .75);
+    }
+
+    #form-wrapper {
+        display: flex;
+        height: 100vh;
+
+        #form-left {
+            width: 60%;
+            min-height: 80vh;
+        }
+
+        #form-right {
+            width: 40%;
+            min-height: 80vh;
+            display: flex;
+            justify-content: center;
+
+            form {
+                align-self: center;
+                width: 75%;
+                height: 50%;
+                z-index: 2;
+
+                .title-row {
+                    flex-direction: column;
+                    display: flex;
+
+                    p {
+                        font-size: 2.8rem;
+                        line-height: 4.5rem;
+                        letter-spacing: -0.14rem;
+                        text-align: center;
+                        color: $color-dark-grey;
+                        font-family: $font-base;
+                        font-weight: 300;
+                        width: 100%;
+                    }
+
+                    #vector-icon {
+                        background-image: url("../../../assets/Decoration.svg");
+                        background-repeat: no-repeat;
+                        background-position: center;
+                        background-size: contain;
+                        height: 1.7rem;
+                        width: 100%;
+                    }
+                }
+
+                .form-row {
+                    display: flex;
+                    justify-content: space-between;
+                    width: 100%;
+                    height: 7em;
+
+                    &#text-area-row {
+                        display: block;
+                        text-align: left;
+                        height: 11em;
+
+                    }
+
+                    label {
+                        display: block;
+                        font-size: 1em;
+                        font-weight: bold;
+                        color: $color-dark-grey;
+                        letter-spacing: -0.76px;
+                        padding-bottom: 0.5em;
+                        padding-top: 2em;
+                    }
+
+                    input {
+                        display: block;
+                        border: none;
+                        background: inherit;
+                        border-bottom: 1px solid black;
+                        width: 100%;
+                        font-size: 1.1em;
+
+                        &:focus {
+                            outline: none;
+                        }
+                    }
+
+                    .form {
+                        position: relative;
+                        height: 100%;
+                        width: 48%;
+
+
+
+                    }
+
+                    .form-full {
+                        height: 100%;
+                        width: 100%;
+                        position: relative;
+
+                        textarea {
+                            width: 100%;
+                            background-color: inherit;
+                            border: none;
+                            border-bottom: 1px solid black;
+                            resize: none;
+                            height: 90px;
+                            font-size: 1.1em;
+
+                            &:focus {
+                                outline: 0;
+                            }
+
+                        }
+
+
+
+                        .button-wrapper {
+                            width: 100%;
+                            height: 100%;
+                            display: inline-flex;
+                            justify-content: end;
+                            flex-direction: row-reverse;
+
+                            button {
+                                height: 50px;
+                                width: 150px;
+                                border-radius: 0;
+                                padding: 15px;
+                                align-self: center;
+                                background: transparent;
+                                font-weight: bold;
+                                border: 0.75px solid $color-dark-grey;
+
+                                &:focus{
+                                    outline: none;
+                                }
+                                
+                                &:hover {
+                                    border: 2px solid $color-dark-grey;
+                                }
+                            }
+                        }
+
+
+                    }
+
+                    .error-message {
+
+                        color: red;
+
+                        line-height: 1;
+                        margin-bottom: 0;
+                        position: absolute;
+                        bottom: 0;
+                        width: 100%;
+                        font-size: 0.7em;
+                        letter-spacing: 0;
+                        text-align: left;
+                        font-weight: bold;
+
+                    }
+
+
+                }
+
+
+            }
+        }
+
+
+    }
+}
