--- a/give_away_site/src/components/HomePage/HomeSteps/HomeSteps.scss
+++ b/give_away_site/src/components/HomePage/HomeSteps/HomeSteps.scss
@@ -1,8 +1,6 @@
 @import "../../../scss/settings/colors";
 @import "../../../scss/settings/fonts";
 
-
-
 #section-steps {
     width: 100vw;
     min-height: 380px;
@@ -13,17 +11,13 @@
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-
     .one-step {
-
         height: 100px;
         text-align: center;
         margin-bottom: 0.8rem;
         margin-right: 2.5%;
         margin-left: 2.5%;
-
-        p{
-           
+        p {
             font-size: 1.5rem;
             line-height: 2rem;
             font-weight: 300;
@@ -31,17 +25,13 @@
             color: $color-dark-grey;
             width: 14rem;
             margin-bottom: 0.8rem;
-
         }
-        hr{
-          
-           margin: 0 auto;
+        hr {
+            margin: 0 auto;
             width: 6.25rem;
             border: 1px solid $color-light-grey;
             margin-bottom: 0.8rem;
         }
-
-
     }
     #step-one {
         background-image: url("../../../assets/Icon-1.svg");
@@ -49,7 +39,6 @@
         background-position: center;
         min-height: 100%;
         min-width: 100px;
-
     }
     #step-two {
         background-image: url("../../../assets/Icon-2.svg");
@@ -57,7 +46,6 @@
         background-position: center;
         min-height: 100%;
         min-width: 100px;
-
     }
     #step-three {
         background-image: url("../../../assets/Icon-3.svg");
@@ -65,7 +53,6 @@
         background-position: center;
         min-height: 100%;
         min-width: 100px;
-
     }
     #step-four {
         background-image: url("../../../assets/Icon-4.svg");
@@ -73,27 +60,24 @@
         background-position: center;
         min-height: 100%;
         min-width: 100px;
-
     }
 }
-
 #section-give {
     width: 100vw;
     min-height: 30vh;
     padding-top: 5%;
     padding-bottom: 5%;
     background-color: white;
-   // padding-right: 10%;
-    //padding-left: 10%;
     margin: 0 auto;
     text-align: center;
-
-    #give-wrapper{
+    #give-wrapper {
         border: 0.75px solid $color-dark-grey;
         display: inline-block;
         padding: 1rem 7.75rem;
-        
-        .give-text{
+        a{
+            text-decoration: none;
+        }
+        .give-text {
             font-size: 3rem;
             line-height: 3.7rem;
             color: $color-dark-grey;
@@ -101,7 +85,5 @@
             margin: 0 auto;
             text-align: center;
         }
-
     }
-
 }
