--- a/give_away_site/src/components/HomePage/HomeUserPanel/HomeUserPanel.scss
+++ b/give_away_site/src/components/HomePage/HomeUserPanel/HomeUserPanel.scss
@@ -4,7 +4,9 @@
 #user-wrapper {
     text-align: right;
     margin-right: 10%;
-
+    a{
+        text-decoration: none;
+    }
     div {
         display: inline;
         font-size: 0.75em;
