--- a/give_away_site/src/components/Common/StepsBanner/StepsBanner.scss
+++ b/give_away_site/src/components/Common/StepsBanner/StepsBanner.scss
@@ -2,10 +2,10 @@
 @import "../../../scss/settings/fonts";
 .steps {
     width: 100vw;
-    min-height: 10%;
-    padding-top: 4.5rem;
+    height: 32vh;
+    padding-top: 3.2rem;
     p {
-        font-size: 3.1rem;
+        font-size: 2.5rem;
         line-height: 4.5rem;
         letter-spacing: -0.14rem;
         text-align: center;
@@ -17,6 +17,6 @@
         background-repeat: no-repeat;
         background-position: center;
         min-height: 4rem;
-        margin-bottom: 3.3rem;
+        margin-bottom: 4.3rem;
     }
 }
