--- a/give_away_site/src/components/HomePage/HomeContactForm/HomeContactForm.scss
+++ b/give_away_site/src/components/HomePage/HomeContactForm/HomeContactForm.scss
@@ -7,6 +7,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
+    width: 100vw;
+    height: 100vh;
 
     &::after {
         content: "";
@@ -154,6 +156,7 @@
 
                                 &:hover {
                                     border: 2px solid $color-dark-grey;
+                                    cursor: pointer;
                                 }
                             }
                         }
