--- a/give_away_site/src/components/HomePage/HomeHelpOptions/HomeHelpOptions.scss
+++ b/give_away_site/src/components/HomePage/HomeHelpOptions/HomeHelpOptions.scss
@@ -4,6 +4,7 @@
 
 #section-help {
     margin: 0 10%;
+    height: 100vh;
 
     #banner-choose {
         display: flex;
@@ -30,7 +31,7 @@
             &:hover {
                 border: 1px solid $color-dark-grey;
             }
-            
+
         }
     }
 
@@ -44,6 +45,7 @@
 
     ul {
         list-style: none;
+        height: 34vh;
 
         .header-list {
             display: inline-block;
@@ -81,8 +83,21 @@
 
     #help-toogle {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         padding: 1em 35em;
+
+        .pageButton {
+            padding: 10px;
+            cursor: pointer;
+            margin: 0 5px;
+            
+        }
+        
+        .activePage {
+            border: 1px solid black;
+            font-weight: bold;
+            cursor: pointer;
+        }
 
         .toogle-list {
             border: 1px solid transparent;
